fix(pro:transfer): fix overflowed text style

--- a/packages/components/_private/checkable-list/style/themes/default.variable.less
+++ b/packages/components/_private/checkable-list/style/themes/default.variable.less
@@ -1,11 +1,14 @@
 @checkable-list-color: @text-color;
 @checkable-list-disabled-color: @text-color-disabled;
+@checkable-list-background-color: @background-color-component;
 
 @checkable-list-item-font-size: @font-size-md;
 @checkable-list-item-min-height: @height-md;
-@checkable-list-item-padding: 0 @spacing-md;
+@checkable-list-item-padding: @spacing-xs 0 @spacing-xs @spacing-md;
 @checkable-list-item-line-height: @line-height-base;
+@checkable-list-item-hover-color: @color-graphite-l50;
 
+@checkable-list-close-icon-padding: 0 @spacing-md;
 @checkable-list-clear-icon-font-size: @font-size-md;
 @checkable-list-close-icon-font-size: @font-size-md;
 @checkable-list-close-icon-color: @color-graphite-d20;
