--- a/packages/components/style/variable/prefix.less
+++ b/packages/components/style/variable/prefix.less
@@ -46,6 +46,7 @@
 @table-prefix: ~'@{idux-prefix}-table';
 @tabs-prefix: ~'@{idux-prefix}-tabs';
 @tree-prefix: ~'@{idux-prefix}-tree';
+@tree-node-prefix: ~'@{tree-prefix}-node';
 
 // Data Entry
 @form-prefix: ~'@{idux-prefix}-form';
