--- a/packages/pro/transfer/style/themes/default.variable.less
+++ b/packages/pro/transfer/style/themes/default.variable.less
@@ -1,5 +1,7 @@
 @pro-transfer-list-min-width: 260px;
 @pro-transfer-list-min-height: 290px;
+@pro-transfer-list-background-color: @background-color-component;
+@pro-transfer-list-item-hover-color: @color-graphite-l50;
 
 @pro-transfer-table-close-icon-padding: 0 0 0 @spacing-md;
 @pro-transfer-tree-close-icon-padding: 0 @spacing-md;
